tests/liquid/pos/operators/add-03.js
/*@ foo :: (number) => {string | v > 100 } */
function foo(x){

  var y = 120;
 
  return y; // x + y; 
}
