tests/liquid/neg/operators/add-03.js
/*@ foo :: (number) => number */
function foo(x){
  var y = "dog";
  return x + y; 
}
